# MachineLearning

./: .gitmodules  CMakeLists.txt  TestFunctions.py  test.py
.github/workflows/: cmake.yml
include/: Logger.hpp  library.h
lib/: CMakeLists.txt
lib/eigen/: CMakeLists.txt
lib/eigen-3.4.0/: CMakeLists.txt
src/: LinearModel.cpp  LinearModel.h  Logger.cpp  MultiLayerPerceptron.cpp  MultiLayerPerceptron.hpp  RadialBasisFunction.cpp  RadialBasisFunction.h  TestMatplotlib.cpp  TestMatplotlib.hpp  UUID.cpp  UUID.hpp  Vector.hpp  Vector2D.cpp  Vector2D.hpp  library.cpp
